# otus-cs

./: CMakeLists.txt  README.md
hw01-turing-machine/: solutions.md
hw02-lc3-assembly/: invert-binary-number.md
hw03-logical-expressions/: expressions.md
hw04-nasm/: maxsequence.nasm
hw05-guess-number/: main.c
hw06-labyrinth/: main.c
hw07-lexer/: list.c  list.h  main.c  scanner.c  scanner.h
hw08-interpreter/: ast.c  ast.h  generate_parser.bash  main.c  symbol_table.c  symbol_table.h
hw08-interpreter/grammar/: Dockerfile  lexer.lex  parser.y
hw09-unix-file-system/: script.md
hw10-docker/: Dockerfile  build.bash
hw11-online-chat/client/: main.c
hw11-online-chat/server/: main.c
hw12-course-work/client/: main.c
hw12-course-work/libs/: msg_codec.c  msg_codec.h  msg_types.h
hw12-course-work/server/: main.c  server.c  server.h
